--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/AlirezaEntessari/instock-api#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "knex": "^3.0.1",
     "mysql2": "^3.6.3"
